<resources>
    <string name="appName">iot-smart-water</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_account">no Account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_success">Login Success</string>
    <string name="login_fail">Login Fail</string>
    <string name="register">Register</string>
    <string name="register_success">Register Success</string>
    <string name="register_fail">Register Fail</string>
    <string name="input_username">Enter your username</string>
    <string name="input_room">Enter your room</string>
    <string name="input_mail">Enter your email</string>
    <string name="input_tel">Enter your tel</string>
    <string name="input_password">Enter your password</string>
    <string name="confirm_passowrd">Confirm your password</string>
    <string name="scan">Scan</string>
    <string name="auth_detail">Confirm authorization to log in?</string>
    <string name="auth">Auth</string>
    <string name="auth_success">Auth Success</string>
    <string name="auth_fail">Auth Fail</string>
    <string name="user_name">User Name</string>
    <string name="user_create">User Registration Time</string>
    <string name="user_points">User Points</string>
    <string name="user_flow">User Available Water Flow</string>
    <string name="flow_switch">Flow Switch</string>
    <string name="user_auth">User Authorization</string>
    <string name="connect_wait">Connecting to server, please wait</string>
    <string name="logout">Logout</string>
    <string name="logout_detail">Confirm logout?</string>
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>