<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/loginBtn"
        style="@style/RoundButton"
        android:text="@string/login" />

    <Button
        android:id="@+id/scanBtn"
        style="@style/RoundButton"
        android:layout_marginTop="20dp"
        android:text="@string/scan" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/no_account"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
