<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEt"
            style="@style/RoundEditText"
            android:hint="@string/input_username"
            android:inputType="textPersonName" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pwdEt"
                style="@style/RoundEditText"
                android:hint="@string/input_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            style="@style/RoundButton"
            android:layout_marginTop="60dp"
            android:text="@string/login" />

    </LinearLayout>

</ScrollView>
